# saasproject

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  CODEOWNERS  README.md  dependabot.yml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  release.yml  rollback.yml  security.yml
alembic/: env.py
alembic/versions/: initial_schema.py
cli/: email_converter_cli.py
config/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  MAINTENANCE_PLAN.md  OPERATIONS_MANUAL.md  PRODUCTION_READINESS_REPORT.md  RELEASE_STRATEGY.md  TROUBLESHOOTING_GUIDE.md  V1_ROADMAP.md  V2_ROADMAP.md
docs/legal/: Cookie_POLICY.md  DATA_RETENTION_POLICY.md  GDPR_CHECKLIST.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
frontend/: .env.example  .oxlintrc.json  .prettierrc  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.vitest.json  vitest.config.ts
frontend/e2e/: homepage.spec.ts  navigation.spec.ts
frontend/public/: manifest.json  robots.txt  security-headers.conf  sitemap.xml  sw.js
frontend/src/: index.css  main.tsx
infrastructure/terraform/: README.md
k8s/: README.md
sdks/csharp/: EmailConverterClient.cs
sdks/go/: client.go  go.mod
sdks/javascript/: package.json  tsconfig.json
sdks/python/: setup.py
src/: __init__.py  main.py
src/api/: router.py
src/core/: celery_app.py  config.py  cookies.py  database.py  datetime_utils.py  dependencies.py  exceptions.py  logging.py  rbac.py  security.py
src/db/: __init__.py  session.py
src/middleware/: __init__.py  error_handler.py  logging.py
src/models/: __init__.py  base.py  registry.py
src/repositories/: __init__.py  session.py  user.py  verification.py
src/schemas/: auth.py  health.py  permission.py  role.py  user.py
src/services/: email.py  oauth.py  rate_limiter.py  redis.py
tests/: conftest.py  test_auth.py  test_password.py  test_token.py
tests/admin/: test_api.py  test_models.py  test_services.py
tests/analytics/: test_analytics.py
tests/conversion/: test_api.py  test_compression.py  test_models.py  test_schemas.py  test_services.py  test_strategies.py
tests/gateway/: test_gateway.py
tests/license/: test_activation.py  test_api.py  test_models.py  test_schemas.py  test_security.py  test_services.py
tests/mime/: test_mime_compliance.py  test_mime_processing.py
tests/monitoring/: test_monitoring.py
tests/notification/: test_api.py  test_models.py  test_providers.py  (+1 more)
(+803 files in other folders)
