[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "email-converter-saas"
version = "0.1.0"
description = "Email Converter SaaS - Convert MBOX, PST, EML files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["email", "converter", "mbox", "pst", "eml", "saas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "passlib>=1.7.4",
    "python-magic>=0.4.27",
    "jinja2>=3.1.3",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "celery[redis]>=5.3.0",
    "kombu>=5.3.0",
    "cryptography>=42.0.0",
    "elasticsearch>=8.12.0",
    "opensearch-py>=2.4.0",
    "minio>=7.2.0",
    "orjson>=3.9.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
    "pyotp>=2.9.0",
    "pytz>=2024.1",
    "qrcode[pil]>=7.4.2",
    "razorpay>=1.4.1",
    "sentry-sdk[fastapi]>=1.40.0",
    "stripe>=8.0.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.44b0",
    "opentelemetry-instrumentation-celery>=0.44b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
